Trying to clean up the output

--- a/deploy_app.ipynb
+++ b/deploy_app.ipynb
@@ -58,26 +58,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('export.pkl', <http.client.HTTPMessage at 0x1eebaa4d5c8>)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import urllib.request\n",
     "\n",
     "# MODEL_URL = \"https://drive.google.com/uc?export=download&id=1oOdWwIWh9CYA7C42G6hFixkwPaI7c-xD\"\n",
     "MODEL_URL = \"https://www.dropbox.com/s/il61ywgbd7hgtml/export.pkl?dl=1\"\n",
-    "urllib.request.urlretrieve(MODEL_URL, \"export.pkl\")"
+    "_ = urllib.request.urlretrieve(MODEL_URL, \"export.pkl\")"
    ]
   },
   {
